<resources>
    <string name="parcel_user" translatable="false">pcl_user</string>
    <string name="parcel_barang" translatable="false">pcl_barang</string>

    <string name="app_name">PointOfSales</string>

    <string name="image_logo_text">Logo Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add">Add</string>

    <string name="title_dashboard">Papillon Store</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Papillon Store</string>
    <string name="nav_header_subtitle">Your office stationery provider</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_kasir">Kasir</string>
    <string name="nav_laporan">Laporan</string>
    <string name="nav_user">User</string>
    <string name="nav_barang">Barang</string>

    <string name="text_user_name">Nama</string>
    <string name="text_user_repassword">Re-password</string>
    <string name="text_user_phone">No Telp</string>
    <string name="text_user_address">Alamat</string>
    <string name="text_user_id">ID</string>
    <string name="text_user_role">Role</string>

    <string name="text_brg_harga_jual">Harga Jual</string>
    <string name="text_brg_harga_beli">Harga Beli</string>
    <string name="text_brg_nama">Nama</string>
    <string name="text_brg_stock">Stock</string>

    <string name="add_user">User</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="list_user">List User</string>

    <string name="rad_admin">Admin</string>
    <string name="rad_kasir">Kasir</string>
    <string name="list_barang">List Barang</string>
</resources>
