<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/top_margin"
    tools:context=".BarangFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_barang"
                android:textSize="@dimen/sub_title_font_size" />

            <EditText
                android:id="@+id/txt_brg_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_brg_nama"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_brg_harga_jual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_brg_harga_jual"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_brg_harga_beli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_brg_harga_beli"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_brg_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_brg_stock"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_brg"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/update_brg"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/delete_brg"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>